<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.google.android.material.chip.ChipGroup android:id="@+id/filters" android:layout_width="0dp" android:layout_height="wrap_content" android:paddingHorizontal="12dp" app:singleSelection="true" app:selectionRequired="true" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.chip.Chip android:id="@+id/filter_all" style="@style/Widget.Material3.Chip.Filter" android:layout_width="wrap_content" android:layout_height="48dp" android:text="@string/filter_all" android:checked="true" />
        <com.google.android.material.chip.Chip android:id="@+id/filter_active" style="@style/Widget.Material3.Chip.Filter" android:layout_width="wrap_content" android:layout_height="48dp" android:text="@string/filter_active" />
        <com.google.android.material.chip.Chip android:id="@+id/filter_complete" style="@style/Widget.Material3.Chip.Filter" android:layout_width="wrap_content" android:layout_height="48dp" android:text="@string/filter_complete" />
        <com.google.android.material.chip.Chip android:id="@+id/filter_failed" style="@style/Widget.Material3.Chip.Filter" android:layout_width="wrap_content" android:layout_height="48dp" android:text="@string/filter_failed" />
    </com.google.android.material.chip.ChipGroup>
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/list" android:layout_width="0dp" android:layout_height="0dp" android:clipToPadding="false" android:padding="8dp" app:layout_constraintTop_toBottomOf="@id/filters" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" />
    <TextView android:id="@+id/empty" android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="24dp" android:text="@string/downloads_empty" android:textAlignment="center" android:textAppearance="?attr/textAppearanceBodyLarge" app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
