<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout android:id="@+id/address_layout" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="8dp" android:hint="@string/web_address" app:endIconMode="clear_text" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@id/go">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/address" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textUri" android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton android:id="@+id/go" android:layout_width="72dp" android:layout_height="56dp" android:layout_marginEnd="8dp" android:minWidth="0dp" android:maxLines="1" android:paddingHorizontal="12dp" android:text="@string/go" app:layout_constraintTop_toTopOf="@id/address_layout" app:layout_constraintBottom_toBottomOf="@id/address_layout" app:layout_constraintEnd_toEndOf="parent" />
    <com.google.android.material.progressindicator.LinearProgressIndicator android:id="@+id/loading" android:layout_width="0dp" android:layout_height="wrap_content" android:visibility="gone" app:layout_constraintTop_toBottomOf="@id/address_layout" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" />
    <WebView android:id="@+id/web" android:layout_width="0dp" android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@id/loading" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/media_download" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="16dp" android:layout_marginBottom="20dp" android:contentDescription="@string/download_media" android:visibility="gone" app:fabCustomSize="48dp" app:srcCompat="@drawable/ic_download" app:layout_constraintEnd_toEndOf="@id/web" app:layout_constraintBottom_toBottomOf="@id/web" />
</androidx.constraintlayout.widget.ConstraintLayout>
